# crm/swagger/swagger.yaml
@@ -15,9 +15,23 @@ paths:
       - "user"
       summary: "사용자 조회"
       operationId: "user_get"
+      consumes:
+      - "application/x-www-form-urlencoded"
       produces:
       - "application/json"
-      parameters: []
+      parameters:
+      - name: "name"
+        in: "query"
+        required: false
+        type: "string"
+      - name: "age"
+        in: "query"
+        required: false
+        type: "integer"
+      - name: "gender"
+        in: "query"
+        required: false
+        type: "string"
       responses:
         "200":
           description: "success"
